--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="/assets/favicon.jpg" />
+  <link rel="apple-touch-icon" href="/assets/favicon.jpg" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="GLORIA SILVA PHOTO" />
+  <meta name="msapplication-TileImage" content="/assets/favicon.jpg" />
+  <meta name="application-name" content="GLORIA SILVA PHOTO" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+  <meta name="author" content="http://marianoarias.soy" />
+
+  <title>GLORIA SILVA PHOTO</title>
+  <meta name="title" content="GLORIA SILVA PHOTO" />
+  <meta property="og:url" content="http://gloriasilvaphoto.com" />
+  <meta property="og:image" content="/assets/gloriasilva.jpg" />
+  <meta property="og:image:alt" content="GLORIA SILVA PHOTO" />
+  <meta property="og:title" content="GLORIA SILVA PHOTO" />
+  <meta property="og:description" content="" />
+  <meta name="description" content="" />
+  <link rel="canonical" href="http://gloriasilvaphoto.com" />
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
